# vlcPlayer

./: CMakeLists.txt  ExtraMenu.cpp  ExtraMenu.h  MainWindow.cpp  MainWindow.h  README.md  StyleApplication.cpp  StyleApplication.h  VideoControlWidget.cpp  VideoControlWidget.h  VideoPlayWidget.cpp  VideoPlayWidget.h  VlcInstance.cpp  VlcInstance.h  VlcMedia.cpp  VlcMedia.h  VlcMediaPlayer.cpp  VlcMediaPlayer.h  main.cpp
style/: global.qss
